@@ -9,6 +9,8 @@
 	* updated configure to try to detect tuxedo version and set configure
 	  link flags appropriately (currently only for 8.* and 9.*)
 	* removed extraneous "static" from 2 callback functions in oracle module
+	* fixed m4/acx_thread.m4 to include -lpthread in PTHREAD_LIBS on
+	  Linux
 
 2006.10.04: David Nichols
 	* added internal q_dirname() function to QoreLib.h returning a string
